syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package js.chirp.user.api;

message RegistrationRequest {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string password = 2;
}

message LoginRequest {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string password = 2;
}

message Token {
    string value = 1;
}

service ChirpUserService {
    option (akkaserverless.service) = {
        type: SERVICE_TYPE_ENTITY
        component: ".user.domain.User"
    };

    rpc Register(RegistrationRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/user/{user_name}/register"
            body: "*"
        };
    }

    rpc Login(LoginRequest) returns (Token) {
        option (google.api.http) = {
            put: "/user/{user_name}/login"
            body: "*"
        };
    }
}
